Money Manager 18.1.0
* Java 9
* Support for Raiffeisen Bank (Russia) OFX statement
* NPE while reloading statement